# monsterfi-protocol

./: .env.example  .gitignore  LICENSE-MIT  Makefile  README.md  foundry.toml  remappings.txt
agent/: .gitignore  Cargo.toml  Dockerfile  LICENSE
agent/src/: backtest.rs  backtest11.rs  indicators.rs  indicators1.rs  main.rs  main.txt  main0.9  main11.rs  strategies1.rs
agent/src/indicators/: ma.rs  macd.rs  mod.rs  rsi.rs
agent/src/strategies/: macd_rsi.rs  mod.rs
contracts/: MonsterFactory.sol  MonsterVault.sol  MonsterVault.sol.bak
interfaces/: IMonsterVault.sol  IStrategyConfig.sol
